# argus

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  audit.py  config.py  main.py  mfa.py  ratelimit.py  requirements.txt  security.py
backend/api/: alerts.py  assets.py  audit.py  auth.py  incidents.py  logs.py  mitre.py  reports.py  rules.py  simulations.py
backend/attack_simulator/: __init__.py  campaigns.py  scenarios.py
backend/correlation_engine/: __init__.py  rules.py
backend/database/: connection.py  seed.py
backend/detection/: __init__.py  engine.py  loader.py  scheduler.py  sigma.py  threshold.py
backend/ingestion/: __init__.py  bootstrap.py  enrichment.py  file_tailer.py  http_ingest.py  pipeline.py  syslog_server.py
backend/log_generators/: __init__.py  cloud.py  email_gen.py  linux.py  network.py  windows.py
backend/mitre/: __init__.py  mappings.py
backend/models/: __init__.py  alert.py  asset.py  attack_simulation.py  audit_log.py  detection_rule.py  hunt_query.py  incident.py  ingest_key.py  log.py  user.py  vulnerability.py
backend/scripts/: migrate_sqlite_to_pg.py
backend/search/: __init__.py  client.py  opensearch_store.py  query_translator.py  (+3 more)
docs/: SIEM_TRANSFORMATION_PLAN.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
(+38 files in other folders)
