[package]
name = "argus"
version = "0.1.0"
description = "Argus SIEM desktop shell"
authors = ["Argus"]
edition = "2021"

[lib]
name = "argus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
